# BitsAndBlocks

./: Cargo.toml
assets/saves/: .json  Asada.json  Asado.json  AsadoFries.json  Asophoeteda.json  BellaTizol.json  Change.json  Facist.json  Reach.json  Save Testing.json  Testing.json
assets/voxels/: voxel_definitions.json
src/: config.rs  events.rs  graphics.rs  helpers.rs  loading.rs  main.rs  main_menu.rs  notes.txt  player.rs  prelude.rs  raycast.rs  save.rs  ui.rs  ui_helpers.rs  voxel.rs  world.rs
src/Character/: mod.rs  player.rs  raycast.rs
src/Loading/: loading.rs  save.rs
src/Meta/: components.rs  config.rs  resources.rs
src/UI/: main_menu.rs  mod.rs  ui.rs  ui_helpers.rs
src/UI/in_game/: cursor.rs  debug.rs  game_ui.rs
src/UI/main_menu/: main_menu_ui.rs  mod.rs  new_game.rs
src/Voxel/: graphics.rs  mod.rs  voxel.rs
src/app/: mod.rs  setup.rs  states.rs
src/character/: mod.rs  player.rs  player_input.rs  raycast.rs
src/event_handling/: events.rs
src/global/: audio_events.rs  events.rs  mod.rs  ui_button_system.rs  ui_visibility.rs
src/loading/: loading.rs  mod.rs  save.rs
src/meta/: components.rs  config.rs  mod.rs  resources.rs
src/simulation/: graphics.rs  logic_handler.rs  mod.rs
src/ui/: mod.rs  ui_helpers.rs  ui_visibility.rs
src/ui/in_game/: clock_widget.rs  cursor.rs  debug.rs  exit_menu.rs  game_ui.rs  hotbar.rs  identifier.rs  inventory.rs  mod.rs  speed_indicator.rs
src/ui/main_menu/: load_game.rs  main_menu_ui.rs  main_ui.rs  new_game.rs  options.rs
src/voxel/: helpers.rs  mod.rs  voxel.rs  world.rs
