[package]
name = "BitsAndBlocks"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_rapier3d = "0.28.0"
bevy_fps_controller = "0.15.0"
serde = "1.0.218"
serde_json = "1.0.139"
bevy_atmosphere = "0.12.2"
bevy_simple_text_input = "0.10.2"
bincode = {version = "2.0.1", features = ["serde"]}
bevy-inspector-egui = "0.30"
[profile.release]
incremental = true