[package]
name = "BitsAndBlocks"
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = { version = "0.15.3", default-features = false, features = [
  "android-game-activity",
  "android-game-activity",
  "android_shared_stdcxx",
  "animation",
  "bevy_asset",
  #"bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  #"vorbis",
  "webgl2",
  "x11",
] }
bevy_kira_audio = "0.22.0"

bevy_rapier3d = "0.28.0"
bevy_fps_controller = "0.15.0"
serde = "1.0.218"
serde_json = "1.0.139"
bevy_atmosphere = "0.12.2"
bevy_simple_text_input = "0.10.2"
bincode = {version = "2.0.1", features = ["serde"]}
bevy-inspector-egui = "0.30"
[profile.release]
incremental = true
